Criacao div.painel-principal

--- a/index.html
+++ b/index.html
@@ -35,8 +35,13 @@
             </nav>
     </header>
     <main>
-        <div id="bg-principal">
-
+        <div id="bg-principal" class="panel-principal marker-red">
+            <div class="title">
+                Desenvolvedor Front End
+            </div>
+            <div class="sub-title">
+                Desafio Qconcursos.com
+            </div>
         </div><!-- end bg-principal-->
     </main>
     <footer></footer>
