Criacao e estilizacao panel-sobre

--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
         </ul>
       </nav>
     </header>
+
     <main>
-      <div id="bg-principal" class="panel-principal marker-red">
+      <div id="bg-principal" class="panel-principal">
         <div class="overlay"></div>
         <div class="title">Desenvolvedor Front End</div>
         <div class="sub-title">Desafio Qconcursos.com</div>
@@ -65,7 +66,35 @@
         </div>
       </div>
       <!-- end bg-principal-->
+      <div class="panel-sobre">
+        <div class="box-sobre">
+          <div class="title-sobre">Sobre</div>
+          <div class="texto-sobre">
+            <p>Um breve texto sobre mim.</p>
+
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut
+              dolore earum cumque quos facere consectetur enim accusamus saepe
+              et voluptate, excepturi odit, quasi nam labore voluptatum ducimus
+              consequuntur maiores ipsa.
+            </p>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut
+              dolore earum cumque quos facere consectetur enim accusamus saepe
+              et voluptate, excepturi odit, quasi nam labore voluptatum ducimus
+              consequuntur maiores ipsa.
+            </p>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut
+              dolore earum cumque quos facere consectetur enim accusamus saepe
+              et voluptate, excepturi odit, quasi nam labore voluptatum ducimus
+              consequuntur maiores ipsa.
+            </p>
+          </div>
+        </div>
+      </div>
     </main>
+
     <footer></footer>
 
     <script src="js/script.js"></script>
