Base Html e CSS Ok

--- a/index.html
+++ b/index.html
@@ -92,7 +92,78 @@
             </p>
           </div>
         </div>
+        <!-- end box-sobre -->
       </div>
+      <!-- end panel-sobre -->
+
+      <div class="panel-desafio">
+        <div class="box-desafio">
+          <div class="title-desafio">Desafio</div>
+          <div class="box-github">
+            <div class="box-data">
+              <div class="profile">
+                <div class="img-profile">
+                  <img src="img/user.svg" alt="Imagem Profile" />
+                </div>
+                <a href="#">Visitar Perfil</a>
+              </div>
+              <div class="info">
+                <div class="output">
+                  <p>Repositórios :<span id="repositorios">100</span></p>
+                  <p>Seguidores :<span id="seguidores">150</span></p>
+                  <p>Seguindo :<span id="seguindo">126</span></p>
+                </div>
+                <div class="buttons">
+                  <a href="#" id="btnRepositorio">Ver repositórios</a>
+                  <a href="#" id="btnFavorito">Ver Favoritos</a>
+                </div>
+              </div>
+              <!-- end info -->
+            </div>
+            <div class="box-repo">
+              <!-- box-repositorio -->
+              <table id="table-data">
+                <thead>
+                  <tr>
+                    <th>Name</th>
+                    <th>Data</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>JavascriptX</td>
+                    <td>30/30/3030</td>
+                  </tr>
+                  <tr>
+                    <td>Node.js</td>
+                    <td>30/30/3030</td>
+                  </tr>
+                  <tr>
+                    <td>React</td>
+                    <td>30/30/3030</td>
+                  </tr>
+                  <tr>
+                    <td>JavascriptX</td>
+                    <td>30/30/3030</td>
+                  </tr>
+                  <tr>
+                    <td>Node.js</td>
+                    <td>30/30/3030</td>
+                  </tr>
+                  <tr>
+                    <td>React</td>
+                    <td>30/30/3030</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+            <!-- end box-repositorio -->
+          </div>
+          <!-- end box-github -->
+        </div>
+        <!-- end box-desafio -->
+      </div>
+      <!-- end panel-desafio -->
     </main>
 
     <footer></footer>
