--- a/index.html
+++ b/index.html
@@ -103,15 +103,15 @@
             <div class="box-data">
               <div class="profile">
                 <div class="img-profile">
-                  <img src="img/user.svg" alt="Imagem Profile" />
+                  <img id="imagem" alt="Imagem Profile" />
                 </div>
-                <a href="#">Visitar Perfil</a>
+                <a id="ref-link">Visitar Perfil</a>
               </div>
               <div class="info">
                 <div class="output">
-                  <p>Repositórios :<span id="repositorios">100</span></p>
-                  <p>Seguidores :<span id="seguidores">150</span></p>
-                  <p>Seguindo :<span id="seguindo">126</span></p>
+                  <p>Repositórios : <span id="repositorios"></span></p>
+                  <p>Seguidores : <span id="seguidores"></span></p>
+                  <p>Seguindo : <span id="seguindo"></span></p>
                 </div>
                 <div class="buttons">
                   <a href="#" id="btnRepositorio">Ver repositórios</a>
