Att Todo. Finalizacao de logica, renderizacao e referencia completa

--- a/index.html
+++ b/index.html
@@ -114,48 +114,15 @@
                   <p>Seguindo : <span id="seguindo"></span></p>
                 </div>
                 <div class="buttons">
-                  <a href="#" id="btnRepositorio">Ver repositórios</a>
-                  <a href="#" id="btnFavorito">Ver Favoritos</a>
+                  <a id="btnRepositorio">Ver repositórios</a>
+                  <a id="btnFavorito">Ver favoritos</a>
                 </div>
               </div>
               <!-- end info -->
             </div>
             <div class="box-repo">
               <!-- box-repositorio -->
-              <table id="table-data">
-                <thead>
-                  <tr>
-                    <th>Name</th>
-                    <th>Data</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <td>JavascriptX</td>
-                    <td>30/30/3030</td>
-                  </tr>
-                  <tr>
-                    <td>Node.js</td>
-                    <td>30/30/3030</td>
-                  </tr>
-                  <tr>
-                    <td>React</td>
-                    <td>30/30/3030</td>
-                  </tr>
-                  <tr>
-                    <td>JavascriptX</td>
-                    <td>30/30/3030</td>
-                  </tr>
-                  <tr>
-                    <td>Node.js</td>
-                    <td>30/30/3030</td>
-                  </tr>
-                  <tr>
-                    <td>React</td>
-                    <td>30/30/3030</td>
-                  </tr>
-                </tbody>
-              </table>
+              <table id="table-data"></table>
             </div>
             <!-- end box-repositorio -->
           </div>
