Alt. Sobre concluido

--- a/index.html
+++ b/index.html
@@ -79,25 +79,27 @@
         <div class="box-sobre">
           <div class="title-sobre">Sobre</div>
           <div class="texto-sobre">
-            <p>Um breve texto sobre mim.</p>
+            <p>Olá, meu nome é Lucas!</p>
 
             <p>
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut
-              dolore earum cumque quos facere consectetur enim accusamus saepe
-              et voluptate, excepturi odit, quasi nam labore voluptatum ducimus
-              consequuntur maiores ipsa.
+              Sou uma pessoa apaixonada pela área de desenvolvimento web (tanto front end quanto back end),
+              gosto muito de investir meu tempo em desenvolver respostas através de linhas de códigos. 
+              Sou aficionado por tecnologia, perseverante, dedicado, empenhado e persistente; ou seja, 
+              sou um programador.
             </p>
             <p>
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut
-              dolore earum cumque quos facere consectetur enim accusamus saepe
-              et voluptate, excepturi odit, quasi nam labore voluptatum ducimus
-              consequuntur maiores ipsa.
+              Me formei em Análise e Desenvolvimento de Sistemas e estou terminando minha pós-graduação na 
+              área de Desenvolvimento de Aplicações WEB. No meu tempo livre tenho participado de bootcamps, 
+              aproveitado a minha família, trabalhando em projetos pessoais para aperfeiçoar
+              o que aprendo e (é claro) estudo muito, procurando sempre absorver e tentar aplicar da melhor maneira
+              aquilo que estudo.
             </p>
             <p>
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut
-              dolore earum cumque quos facere consectetur enim accusamus saepe
-              et voluptate, excepturi odit, quasi nam labore voluptatum ducimus
-              consequuntur maiores ipsa.
+              Logo abaixo você pode conferir alguns dos meus repositórios em que passo bastante tempo desenvolvendo
+              páginas simples, desafios pessoais e até mesmo aplicações mais elaboradas.
+              Não sou muito apegado a uma linguagem de programação apenas, acredito que a linguagem é uma ferramenta 
+              para alcançarmos os nossos objetivos, portanto acredito que posso me empenhar e aprender qualquer linguagem para
+              desenvolver o que é necessário e entregar resultados.
             </p>
           </div>
         </div>
